<?xml version="1.0"?>
<package>
  <name>kobuki_soft</name>
  <version>0.1.3</version>
  <description>
    Soft kobuki impementation meta package
  </description>

  <author>Jihoon Lee</author>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/kobuki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>kobuki_softnode</run_depend>
  <run_depend>kobuki_softapps</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
