<?xml version="1.0"?>
<package>
  <name>kobuki_softapps</name>
  <version>0.1.2</version>
  <description>The kobuki_softapps package</description>

  <author>Jihoon Lee</author>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>kobuki_softnode</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rviz</run_depend>
</package>
