<?xml version="1.0"?>
<package>
  <name>kobuki_softnode</name>
  <version>0.1.1</version>
  <description>
    ROS nodelet for fake Kobuki.
  </description>

  <author email="jihoonl@yujinrobot.com">Jihoon Lee</author>
  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/kobuki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>yujin_maps</run_depend>
  <run_depend>kobuki_description</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
  </export>
</package>
